--- a/django/crud/boards/templates/boards/index.html
+++ b/django/crud/boards/templates/boards/index.html
@@ -3,5 +3,12 @@
 {% block body %}
 <h1 class="text-center">Boards</h1>
 <hr>
+{% for board in boards %}
+    <p>글 번호: {{ board.pk }}</p>
+    <p>글 제목: {{ board.title }}</p>
+    <a href="/boards/{{ board.pk }}">[글 상세보기]</a>
+    <hr>
+{% endfor %}
 <a href="/boards/new/">[글 작성]</a>
+<br><br><br>
 {% endblock %}
