--- a/django/crud/boards/templates/boards/new.html
+++ b/django/crud/boards/templates/boards/new.html
@@ -3,7 +3,8 @@
 {% block body %}
 <h1 class="text-center">NEW</h1> <!-- 가운데 정렬 -->
 <hr>
-<form action="/boards/create/" method="GET">
+<form action="/boards/create/" method="POST">
+    {% csrf_token %}  <!-- POST 방식을 사용하려면 반드시 필요하다!!! -->
     <label for="title">Title</label><br>
     <input type="text" name="title" id="title"><br>   <!-- input의 id와 label의 for는 같아야 한다 -->
     <label for="content">Content</label><br>
