--- a/django/crud2/boards/templates/boards/edit.html
+++ b/django/crud2/boards/templates/boards/edit.html
@@ -2,14 +2,14 @@
 {% block body %}
     <h1 class="text-center">글 수정</h1>
     <hr>
-    <form action="/boards/{{ board.pk }}/update/" method="post">
+    <form action="" method="post">
         {% csrf_token %}
         <label for="title">제목</label><br>
         <input type="text" name="title" id="title" value="{{ board.title }}"><br>
         <label for="content">내용</label><br>
         <textarea name="content" id="content" cols="30" rows="10">{{ board.content }}</textarea><br>
         <input type="submit" value="수정">
-        <a href="/boards/"><input type="button" value="메인"></a>
+        <a href="{% url 'boards:index' %}"><input type="button" value="메인"></a>
     </form>
 
 {% endblock %}
