--- a/django/crud2/boards/templates/boards/new.html
+++ b/django/crud2/boards/templates/boards/new.html
@@ -2,14 +2,14 @@
 {% block body %}
     <h1 class="text-center">새글 작성</h1>
     <hr>
-    <form action="/boards/create/" method="post">
+    <form action="" method="post">
         {% csrf_token %}
         <label for="title">제목</label><br>
         <input type="text" name="title" id="title" placeholder="제목을 입력하세요"><br>
         <label for="content">내용</label><br>
         <textarea name="content" id="content" cols="30" rows="10" placeholder="내용을 입력하세요"></textarea><br>
         <input type="submit" value="작성">
-        <a href="/boards/"><input type="button" value="메인"></a>
+        <a href="{% url 'boards:index' %}"><input type="button" value="메인"></a>
     </form>
 
 {% endblock %}
