--- a/django/practice/boards/templates/boards/base.html
+++ b/django/practice/boards/templates/boards/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,9 +7,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'boards/favicon/favicon.ico' %}">
+    <link rel="icon" href="{% static 'boards/favicon/favicon.ico' %}" type="image/x-icon">
     <title>CRUD_Practice</title>
 </head>
 <body>
+
+
     {% block body %}
     {% endblock %}
 
