--- a/django/practice/boards/templates/boards/edit.html
+++ b/django/practice/boards/templates/boards/edit.html
@@ -4,14 +4,21 @@
 
 <h1 align="center">글 수정 하기</h1>
 <hr>
-<form action="" method="post">
+    <p><b>기존 이미지</b></p>
+    {% if board.image %}
+        <img src="{{ board.image.url }}" alt="{{ board.image }}">
+    {% endif %}
+<hr>
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="title">제목</label><br>
     <input type="text" name="title" id="title" value="{{ board.title }}"><br>
     <label for="content">내용</label><br>
     <textarea name="content" id="content" cols="30" rows="10">{{ board.content }}</textarea><br>
+    <label for="image">이미지</label>
+    <input type="file" id="image" name="image" accept="image/*"><br>
     <input type="submit" value="수정">
     <a href="{% url 'boards:index' %}"><input type="button" value="메인"></a>
 </form>
-
+<br><br><br>
 {% endblock %}
