--- a/django/practice/boards/templates/boards/index.html
+++ b/django/practice/boards/templates/boards/index.html
@@ -1,8 +1,10 @@
 {% extends 'boards/base.html' %}
+{% load static %}
 
 {% block body %}
 
 <h1 align="center">자유 게시판</h1>
+<img src=" {% static 'boards/images/sea.jpg' %}" alt="sea">
 <hr>
 {% for board in boards %}
 
@@ -12,5 +14,5 @@
 {% endfor %}
 <hr>
 <a href="{% url 'boards:new' %}"><input type="button" value="글쓰기"></a>
-
+<br><br><br>
 {% endblock %}
