--- a/django/practice/boards/templates/boards/new.html
+++ b/django/practice/boards/templates/boards/new.html
@@ -4,14 +4,17 @@
 
 <h1 align="center">새글 쓰기</h1>
 <hr>
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data"> <!-- 파일을 올리기 위해 enctype를 정의한다. form-data 타입을 하기 위해서는 POST방식이어야 한다. -->
     {% csrf_token %}
     <label for="title">제목</label><br>
     <input type="text" name="title" id="title" placeholder="제목을 입력하세요"><br>
     <label for="content">내용</label><br>
     <textarea name="content" id="content" cols="30" rows="10" placeholder="내용을 입력하세요"></textarea><br>
+    <label for="image">이미지</label><br>
+    <input type="file" name="image" accept="image/*" id="image"><br>   <!-- accept 속성을 통해 image 파일만 받겠다고 설정 -->
+
     <input type="submit" value="등록">
     <a href="{% url 'boards:index' %}"><input type="button" value="메인"></a>
 </form>
-
+<br><br><br>
 {% endblock %}
