--- a/django/myform/boards/templates/boards/create.html
+++ b/django/myform/boards/templates/boards/create.html
@@ -7,7 +7,7 @@
 <form action="" method="post">
     {% csrf_token %}
 
-    {{ form.as_p }}
+    {{ form.as_p }}   <!-- form의 내용을 p 태그로 만들겠다. -->
 
 
     <hr>
