--- a/django/myform/boards/templates/boards/detail.html
+++ b/django/myform/boards/templates/boards/detail.html
@@ -9,11 +9,44 @@
 <p>글 수정 시각: {{ board.updated_at }}</p>
 <hr>
 
+<h3>댓글</h3>
+{% if user.is_authenticated %}
+    {% for comment in comments|dictsortreversed:'pk' %}
+        <p><b>{{ comment.user }} 님의 댓글 : {{ comment.content }}</b></p>
+        {% if comment.user == request.user %}
+            <form action="{% url 'boards:comments_delete' board.pk comment.pk %}" method="post">
+                {% csrf_token %}
+                <input type="submit" value="댓글삭제">
+            </form>
+        {% endif %}
+    {% empty %}
+        <p>댓글이 없습니다</p>
+    {% endfor %}
+{% else %}
+    <a href="{% url 'accounts:login' %}">로그인이 필요합니다</a>
+{% endif %}
+<hr>
+
+
+<h3>댓글 작성</h3>
+<form action="{% url 'boards:comments_create' board.pk %}" method="post">
+    {% csrf_token %}
+    {{ comment_form.as_p }}
+    <input type="submit" value="댓글등록">
+</form>
+
+
+
+<hr>
 <form action="{% url 'boards:delete' board.pk %}" method="post">
     {% csrf_token %}
     <a href="{% url 'boards:index' %}"><input type="button" value="메인 페이지"></a>
-    <a href="{% url 'boards:update' board.pk %}"><input type="button" value="수정"></a>
-    <input type="submit" value="삭제">
+
+    <!-- 글을 쓴 유저만 수정과 삭제가 가능하도록-->
+    {% if user == board.user %}
+        <a href="{% url 'boards:update' board.pk %}"><input type="button" value="수정"></a>
+        <input type="submit" value="삭제">
+    {% endif %}
 </form>
 
 
