--- a/django/myform/boards/templates/boards/base.html
+++ b/django/myform/boards/templates/boards/base.html
@@ -6,6 +6,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
     {% bootstrap_css %}
     <title>Form html</title>
 </head>
@@ -26,7 +29,7 @@
 
 
         <a href="{% url 'accounts:edit' %}"><input type="button" value="회원정보 수정"></a>
-
+        <a href="{% url 'accounts:change_password' %}"><input type="button" value="비밀번호 수정"></a>
         {% else %}
             <a href="{% url 'accounts:login' %}">[로그인]</a>
             <a href="{% url 'accounts:signup' %}">[회원가입]</a>
