--- a/HTML/Html,Css/ch3/naver.css
+++ b/HTML/Html,Css/ch3/naver.css
@@ -2,6 +2,12 @@
 /* 선택자(selector) */
 /* #은 id 선택자 */
 /* .은 클래스 선택자 */
+
+* {
+  box-sizing: border-box;
+  /* 모든 태그들의 기본적으로 박스사이즈를 width를 계산할 때 border로 계산*/
+}
+
 .blind {
   position: absolute;
   overflow: hidden;
@@ -26,6 +32,7 @@ div#header-search h1{
   /* text-indent: 101%;  들여쓰기 */
   /* background-repeat: no-repeat; 여백이 남으면 이미지가 반복이 되는데 그걸 막기 위해 */
   background: url(./sp_search.svg) -4px -4px no-repeat;
+  vertical-align: middle; /* 세로 정렬,  vertical-align은 display가 inline, inline-block 이어야만 적용된다. */
 }
 
 a {
@@ -47,5 +54,14 @@ a {
   width: 470px;
   height: 45px;
   display: inline-block;
-  border: 2px solid #03cf5d;
+  border: 2px solid #03cf5d; /* hex 표기법 */
+  vertical-align: middle;
+}
+
+/* 실제 검색창*/
+#header-search fieldset input{
+  border: none;
+  padding: 0;
+  outline: none; /* 클릭시 파란 테두리 없애준다. */
+  
 }
