--- a/HTML/Html,Css/ch3/naver.css
+++ b/HTML/Html,Css/ch3/naver.css
@@ -65,3 +65,21 @@ a {
   outline: none; /* 클릭시 파란 테두리 없애준다. */
   
 }
+
+#header-search fieldset button {
+  width: 49px;
+  height: 49px;
+  border: none;
+  padding: 0;
+  background: #03cf5d;  
+}
+
+#search-image {
+  background-image: url(./sp_search.svg);
+  background-position: -4px -60px;
+  background-repeat: no-repeat;
+  width: 21px;
+  height: 21px;
+  display: inline-block;
+  margin: 14px;
+}
