--- a/HTML/Html,Css/ch5/naver.css
+++ b/HTML/Html,Css/ch5/naver.css
@@ -16,6 +16,17 @@ html, body {
   font-family: Dotum,'돋움',Helvetica,"Apple SD Gothic Neo",sans-serif;
 }
 
+#fixed {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  border-radius: 50px;
+}
+
 .blind {
   position: absolute;
   overflow: hidden;
@@ -44,7 +55,7 @@ header {
   margin-top: 8px;
 }
 
-#header-top span:first-child {
+#header-top span {
   color: #888888;
   letter-spacing: -1px; /* 글자사이의 간격*/
   font-size: 11px;
@@ -85,13 +96,13 @@ a {
 }
 
 #header-search fieldset {
-  margin-left: 20px;
+  margin-left: 18px;
   /* padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 10px;
   padding-right: 0px; */
   padding: 12px 0 12px 10px;
-  width: 474px;
+  width: 521px;
   height: 49px;
   display: inline-block;
   border: 2px solid #03cf5d; /* hex 표기법 */
@@ -105,7 +116,7 @@ a {
   padding: 0;
   outline: none; /* 클릭시 파란 테두리 없애준다. */
   vertical-align: top;
-  width: 405px;
+  width: 395px;
   height: 23px;
   
 }
@@ -122,9 +133,31 @@ a {
 
 }
 
+#search-keyboard{
+  background-image: url(https://s.pstatic.net/static/www/img/uit/2019/sp_search.svg);
+  background-repeat: no-repeat;
+  background-position: -33px -60px;
+  width: 19px;
+  height: 11px;
+  display: inline-block;
+  margin: 0 6px;
+  vertical-align: middle;
+}
+
+#search-history {
+  background-image: url(https://s.pstatic.net/static/www/img/uit/2019/sp_search.svg);
+  background-repeat: no-repeat;
+  background-position: -87px -60px;
+  width: 9px;
+  height: 4px;
+  display: inline-block;
+  margin: 0 6px;
+  vertical-align: middle;
+}
+
 #search-image {
   background-image: url(./sp_search.svg);
-  background-position: -4px -60px;
+  background-position: -3px -60px;
   background-repeat: no-repeat;
   width: 21px;
   height: 21px;
@@ -257,7 +290,7 @@ span#nav-more {
 #search-ranking {
   position: absolute;
   top: 16px;
-  right: 30px;
+  right: 100px;
 }
 
 span#rank-number {
